# hackathon_3

./: .cliff.toml  .dockerignore  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  .pylintrc  .semgrep.yml  .semgrepignore  .vulture.toml  .yamllint  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PIPELINE_STATUS.md  README.md  SECURITY.md  USER_MANUAL.md  app.py  check_jobs.sh  fetch_all_traces.py  get_traces.sh  parse_trace.py  poll_pipeline.sh  pyproject.toml
.specify/: constitution.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/: index.html  issues.md  spec.md  work-division.md
docscan/: __init__.py  check_commit.py  ci_checks.py  cli.py  extractor.py  inference.py  monitor.py  schemas.py  secret_scan.py  storage.py
scripts/: download_model.sh
specs/001-core-cli/: README.md  plan.md  spec.md  tasks.md
specs/002-text-extraction/: README.md  plan.md  spec.md  tasks.md
specs/003-llm-inference/: README.md  plan.md  spec.md  tasks.md
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: conftest.py  test_app.py  test_check_commit.py  test_ci_checks.py  test_cli.py  test_extractor.py  test_inference.py  test_monitor.py  test_schemas.py  test_secret_scan.py  test_storage.py
tests/fixtures/: sample_generic.txt  sample_medical.txt  sample_receipt.txt
